@@ -11,3 +11,4 @@
 - QwtPlotCurve::closestPoint is virtual now
 - QwtPlotCurve: polygon clipping includes the painter clip
 - QwtPlotCurve: aggressive weeding added - a fast weeding algo for huge datasets with increasing x or y values
+- QwtSymbol fine tuning of QwtSymbol::AutoCache 
